--- a/index.html
+++ b/index.html
@@ -108,14 +108,28 @@
             <section class="work-section">
                 <div class="container">
                 <h2 class="work-title">What we do</h2>
+                
                 <ul class="work-list">
-                    <li class="work-item"><img class="work-item-image" src="images/box1.jpg" width="370"
-                            alt="Developing Desktop Applications"></li>
+                    <li class="work-item"><img class="work-item-image" src="images/box1.jpg" width="370" height="294"
+                            alt="Developing Desktop Applications">
+                            <div class="item-text-area">
+                                <h3 class="item-text">DESKTOP APPS</h3>
+                            </div>
+                        </li>
                     <li class="work-item"><img class="work-item-image" src="images/box2.jpg" width="370"
-                            alt="Mobile UI/UX design"></li>
+                            alt="Mobile UI/UX design">
+                            <div class="item-text-area">
+                                <h3 class="item-text">MOBILE APPS</h3>
+                            </div>
+                        </li>    
                     <li class="work-item"><img class="work-item-image" src="images/box3.jpg" width="370"
-                            alt="Color Selection"></li>
+                            alt="Color Selection">
+                            <div class="item-text-area">
+                                <h3 class="item-text">DESIGN SOLUTIONS</h3>
+                            </div>
+                        </li>
                 </ul>
+                
                 </div>
             </section>
 
