--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,12 @@
              </ul>
 
           <ul class="portfolio-pictures-list">
-            <li class="portfolio-pic-item"><img src="images/pic1.jpg" width="370" alt="Technoduck">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic1.jpg" width="370" alt="Technoduck">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage
+                and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Technoduck</h3>
             <p class="portfolio-pic-text">Web-site</p>
             </li>
