--- a/portfolio.html
+++ b/portfolio.html
@@ -73,42 +73,74 @@
             <p class="portfolio-pic-text">Web-site</p>
             </li>
             
-            <li class="portfolio-pic-item"><img src="images/pic2.jpg" width="370" alt="Poster New Orlean vs Golden Star">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic2.jpg" width="370" alt="Poster New Orlean vs Golden Star">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Poster New Orlean vs Golden Star</h3>
             <p class="portfolio-pic-text">Design</p>
             </li>
             
-            <li class="portfolio-pic-item"><img src="images/pic3.jpg" width="370" alt="Seafood Restaurant">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic3.jpg" width="370" alt="Seafood Restaurant">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Seafood Restaurant</h3>
             <p class="portfolio-pic-text">Apps</p>
             </li>
 
-            <li class="portfolio-pic-item"><img src="images/pic4.jpg" width="370" alt="Project Prime">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic4.jpg" width="370" alt="Project Prime">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Project Prime</h3>
             <p class="portfolio-pic-text">Marketing</p>
             </li>
 
-            <li class="portfolio-pic-item"><img src="images/pic5.jpg" width="370" alt="Project Boxes">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic5.jpg" width="370" alt="Project Boxes">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Project Boxes</h3>
             <p class="portfolio-pic-text">Apps</p>
             </li>
 
-            <li class="portfolio-pic-item"><img src="images/pic6.jpg" width="370" alt="Inspiration has no Borders">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic6.jpg" width="370" alt="Inspiration has no Borders">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Inspiration has no Borders </h3>
             <p class="portfolio-pic-text">Website</p>
             </li>
 
-            <li class="portfolio-pic-item"><img src="images/pic7.jpg" width="370" alt="Limited Edition">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic7.jpg" width="370" alt="Limited Edition">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Limited Edition</h3>
             <p class="portfolio-pic-text">Design</p>
             </li>
 
-            <li class="portfolio-pic-item"><img src="images/pic8.jpg" width="370" alt="Project LAB">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic8.jpg" width="370" alt="Project LAB">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Project LAB</h3>
             <p class="portfolio-pic-text">Marketing</p>
             </li>
 
-            <li class="portfolio-pic-item"><img src="images/pic9.jpg" width="370" alt="Growing Business">
+            <li class="portfolio-pic-item">
+                <div class="card-overlay">
+                <img src="images/pic9.jpg" width="370" alt="Growing Business">
+                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</p>
+                </div>
             <h3 class="portfolio-pic-title">Growing Business</h3>
             <p class="portfolio-pic-text">Apps</p>
             </li>
