--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         <div class="backdrop is-hidden" data-modal>
         <div class="modal-window">
         <button type="button" class="modal-button" data-modal-close>
-            <svg width="30" height="30" class="team-social-icon">
+            <svg width="11px" height="11px" class="team-social-icon">
                 <use href="./images/icons.svg#icon-close"></use>
             </svg></button>
         </div>    
